# mkfat

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  mkfat_0.1.0.bb
.github/workflows/: build-test.yml
src/: main.rs
tests/: cli.rs
