[package]
name = "mkfat"
version = "0.3.0"
edition = "2021"
description = "A tool to create FAT filesystem images from a JSON manifest."
homepage = "https://github.com/avocado-linux/mkfat"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
fatfs = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
